fixed header size issue on smaller screens

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,7 @@
     color: rgb(23, 104, 82);
     text-shadow: 2px 1px rgb(47, 233, 180);
     font-family: 'Bad Script', cursive;
-    font-size: 40px;
+    font-size: 40px;   
 }
 
 .header-logged-in {
@@ -73,6 +73,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding: 10px;
+}
+
+@media screen and (max-width: 367px) {
+    .header-and-icon h1 a {
+        font-size: 30px;
+    }
 }
 
 /* @media screen and (min-width: 380px) {} */
