--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@ code {
     monospace;
 }
 
+.app {
+  width: 100vw;
+  height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 main {
   min-height: 75vh;
 }
